# backend/api/v1/system/captcha.go
@@ -13,18 +13,15 @@ import (
 
 var store = base64Captcha.DefaultMemStore
 
-type BaseApi struct {
-}
-
 // Captcha
-// @Tags Base
+// @Tags Auth
 // @Summary 生成验证码
 // @Security  ApiKeyAuth
 // @accept    application/json
 // @Produce   application/json
 // @Success 200 {object} response.Response{data=systemRes.SysCaptchaResponse,msg=string} "生成验证码,返回包括随机数id,base64,验证码长度,是否开启验证码"
-// @Router    /v1/base/captcha [post]
-func (b *BaseApi) Captcha(c *gin.Context) {
+// @Router    /auth/captcha [post]
+func (a *AuthApi) Captcha(c *gin.Context) {
 	openCaptcha := global.GVA_CONFIG.Captcha.OpenCaptcha
 	openCaptchaTimeOut := global.GVA_CONFIG.Captcha.OpenCaptchaTimeOut
 	key := c.ClientIP()
