# backend/docs/swagger.yaml
@@ -25,30 +25,29 @@ definitions:
       updatedAt:
         type: string
     type: object
-  request.InitDB:
+  request.Login:
     properties:
-      dbName:
-        description: 数据库名
+      captcha:
+        description: 验证码
         type: string
-      dbPath:
-        description: sqlite数据库文件路径
-        type: string
-      dbType:
-        type: string
-      host:
-        description: 服务器地址
+      captchaId:
+        description: 验证码ID
         type: string
       password:
-        description: 数据库密码
+        description: 密码
         type: string
-      port:
-        description: 数据库连接端口
+      username:
+        description: 用户名
         type: string
-      userName:
-        description: 数据库用户名
+    type: object
+  response.LoginResponse:
+    properties:
+      expiresAt:
+        type: integer
+      token:
         type: string
-    required:
-    - dbName
+      user:
+        $ref: '#/definitions/system.SysUser'
     type: object
   response.Response:
     properties:
@@ -56,6 +55,17 @@ definitions:
         type: integer
       data: {}
       msg:
+        type: string
+    type: object
+  response.SysCaptchaResponse:
+    properties:
+      captchaId:
+        type: string
+      captchaLength:
+        type: integer
+      openCaptcha:
+        type: boolean
+      picPath:
         type: string
     type: object
   system.SysAuthority:
@@ -134,9 +144,62 @@ definitions:
         description: 用户UUID
         type: string
     type: object
+host: localhost:8080
 info:
   contact: {}
+  description: API
+  title: gin-apply-admin API
+  version: "1.0"
 paths:
+  /auth/captcha:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 生成验证码,返回包括随机数id,base64,验证码长度,是否开启验证码
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.SysCaptchaResponse'
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 生成验证码
+      tags:
+      - Auth
+  /auth/login:
+    post:
+      parameters:
+      - description: 用户名, 密码, 验证码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回包括用户信息,token,过期时间
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.LoginResponse'
+                msg:
+                  type: string
+              type: object
+      summary: 用户登录
+      tags:
+      - Auth
   /customer/customer:
     delete:
       consumes:
@@ -278,48 +341,9 @@ paths:
       summary: 分页获取权限客户列表
       tags:
       - ExaCustomer
-  /init/checkdb:
-    post:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 查询用户数据库存在
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  additionalProperties: true
-                  type: object
-                msg:
-                  type: string
-              type: object
-      summary: 查询用户数据库存在
-      tags:
-      - CheckDB
-  /init/initdb:
-    post:
-      parameters:
-      - description: 初始化数据库参数
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.InitDB'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 初始化用户数据库
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  type: string
-              type: object
-      summary: 初始化数据库
-      tags:
-      - InitDB
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: x-token
+    type: apiKey
 swagger: "2.0"
